# JediTestRepoCreate2

./: .gitignore  README.md  benchmark_baseline.json  pyproject.toml
.github/workflows/: ci.yml
llmchess/: __init__.py  ai_player.py  benchmark.py  cli.py  config.py
scripts/: check_regression.py
tests/: test_ai_player.py  test_benchmark.py  test_cli.py  test_config.py
