[project]
name = "llmchess"
version = "0.1.0"
description = "A chess game powered by LLMs through Azure AI Foundry"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
llmchess = "llmchess.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
